2010-03-13  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh: Adjust the script for release test.
	* plugin/src/np_entry.cpp,
	plugin/src/npn_gate.cpp,
	plugin/src/npplat.h,
	plugin/src/npupp.h: Fix the compilation error of '--enable-plugin'.
	* build/snapshot-deb.sh: Add '--enable-plugin' to build Debian package.
	* plugin/src/Makefile.am: Fix the missing header file of automake.
	* AUTHORS,
	configure.ac: xpidl not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=2
	* src/core/pcmanx_utils.h,
	src/notebook.cpp: <bits/wordsize.h> not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=3
	* configure.ac,
	plugin/src/Makefile.am,
	src/Makefile.am: -lutil not available on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=4
	* src/notifier/notifier-impl.c: array initlization cause build error with suncc
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=5
	* configure.ac,
	src/Makefile.am,
	src/view/forkpty.c,
	src/view/forkpty.h,
	src/view/telnetcon.cpp: forkpty() not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=6
	* configure.ac,
	src/core/Makefile.am: ld error on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=7
	* developers: Remove empty folder.
	* build/snapshot-deb.sh: Fix the problem to fetch revision.

2010-03-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* autogen.sh: Change to automake 1.11
	* build/snapshot-deb.sh: popd/pushd is built-in function of bash.
	* src/appconfig.cpp: Fix compilation error.
	* src/mainframe.cpp: Clean some warnings.

2010-03-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
